syntax = "proto3";

package auth.v1;

message LoginRequest {
  string code = 1;
}

message LoginResponse {
  string access_token = 1;
  int32  expires_in = 2;
}

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
}